feat: introduce admin configuration for pickup locations and system settings with new pages, services, and components.

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_URL=http://localhost:3002/api/v1
 VITE_PAYSTACK_PUBLIC_KEY='pk_test_9d97cf0be86b0758ece444694d57a8db41a4be59'
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyBkZraD0rt4dP0TslLVMexomnye48jFcW0
